# LodgeLink

./: CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/contact/: page.tsx
src/app/cookies/: page.tsx
src/app/events/: EventDetailClient.tsx  page.tsx
src/app/events/[eventId]/: EventDetailClient.tsx  page.tsx
src/app/events/new/: page.tsx
src/app/members/: page.tsx
src/app/privacy/: page.tsx
src/app/stats/: page.tsx
src/app/terms/: page.tsx
src/components/event/: AttendeeCard.tsx  AttendeeForm.tsx  AttendeeList.tsx  CSVImporter.tsx  CheckInMode.tsx  EventForm.tsx  EventHeader.tsx  ExportModal.tsx  ReconciliationPanel.tsx  ReconciliationView.tsx  WalkinModal.tsx
src/components/members/: MemberFormModal.tsx
src/components/shared/: Footer.tsx  GlobalStats.tsx  Navbar.tsx
src/lib/: constants.ts
src/lib/checkin/: checkin.ts
src/lib/export/: excel.ts  presets.ts
src/lib/ingestion/: blackpug.ts
src/lib/storage/: db.ts
src/lib/validation/: schemas.ts
src/types/: attendee.ts  event.ts  member.ts
verification/: debug_home.py  final_scout_theme_check.py  final_scout_theme_check_v2.py  verify_export.py  verify_mobile.py  verify_mobile_v2.py  verify_modal.spec.ts  verify_modal_fix.py  verify_modal_fix_v2.py  verify_modal_fix_v3.py
