[package]
name = "lodgelink"
version = "1.0.0"
description = "A modern application for managing lodge events, registrations, and attendee check-in."
authors = ["Chris Frome <chris@chrisfrome.com>"]
license = "MIT"
repository = "https://github.com/cfrome77/LodgeLink"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-log = "2.8.0"
